package io.teamsgroup.caso_1_programacion_concurrente.model;

import jakarta.validation.constraints.NotNull;
import jakarta.validation.constraints.Size;
import lombok.Getter;
import lombok.Setter;


@Getter
@Setter
public class SensorTemperaturaDTO {

    private Integer id;

    @NotNull
    @Size(max = 255)
    private String nombre;

    @NotNull
    @Size(max = 255)
    private Notificacion notificacion;

    @NotNull
    private Double datosTemperatura;

    private Integer sensorTemperatura;

    @NotNull
    @Size(max = 255)
    private String token;

}
